<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/login_gradient"
                                                   android:id="@+id/root">

    <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/card"
            android:keyboardNavigationCluster="false">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="40dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/usernameContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/passwordContainer"
                    app:passwordToggleEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false"
                    android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:id="@+id/username"
                        android:autofillHints="username"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/username_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="45dp"
                    android:layout_width="0dp"
                    android:id="@+id/passwordContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/forgotPass"
                    app:layout_constraintTop_toBottomOf="@+id/usernameContainer"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false"
                    android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:id="@+id/password"
                        android:autofillHints="password"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/password_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:text="@string/forgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPass"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:focusable="true"
                    app:layout_constraintBottom_toTopOf="@+id/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="3dp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                    android:layout_marginBottom="10dp"/>

            <Button
                    android:text="@string/login_btn"
                    android:backgroundTint="@color/loginBtnBackground"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:id="@+id/login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/facebookAuth"
                    app:cornerRadius="20dp"
                    android:layout_marginBottom="10dp"/>

            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:scaleType="fitStart"
                    android:id="@+id/googleAuth"
                    android:backgroundTint="@color/googleBtnBackground"
                    android:adjustViewBounds="true"
                    android:src="@drawable/google_logo"
                    android:contentDescription="@string/google_auth_content"
                    tools:ignore="ImageContrastCheck"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/signUpLbl"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/facebookAuth"/>

            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:id="@+id/facebookAuth"
                    android:backgroundTint="@color/facebookBtnBackground"
                    android:src="@drawable/facebook_logo"
                    android:contentDescription="@string/facebook_auth_content"
                    tools:ignore="ImageContrastCheck"
                    android:paddingBottom="15dp"
                    app:layout_constraintStart_toEndOf="@+id/googleAuth"
                    app:layout_constraintEnd_toStartOf="@+id/appleAuth"
                    app:layout_constraintBottom_toTopOf="@+id/signUpLbl"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintHorizontal_bias="0.5"/>

            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:id="@+id/appleAuth"
                    android:backgroundTint="@color/appleBtnbackground"
                    android:src="@drawable/apple_button"
                    android:contentDescription="@string/apple_auth_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/signUpLbl"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toEndOf="@+id/facebookAuth"
                    app:layout_constraintHorizontal_bias="0.5"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpLbl"
                    android:text="@string/sign_up_question_lbl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    tools:ignore="TextContrastCheck"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/signUpLink"
                    android:layout_marginEnd="5dp"/>

            <TextView
                    android:text="@string/sign_up_link_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpLink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/signUpLbl"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                    android:focusable="true"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:textColor="@color/linkText"
                    app:layout_constraintHorizontal_bias="0.5"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
