<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/login_gradient"
                                                   android:id="@+id/root">

    <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/card"
            android:keyboardNavigationCluster="false">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/nameContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/birthdayContainer"
                    app:passwordToggleEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false" android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:id="@+id/name"
                        android:autofillHints="name"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/name_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:id="@+id/birthdayContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameContainer"
                    app:layout_constraintBottom_toTopOf="@id/phoneContainer"
                    app:passwordToggleEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false" android:layout_marginVertical="10dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@android:drawable/ic_menu_my_calendar" app:endIconTint="@color/normalText">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="date"
                        android:id="@+id/birthday"
                        android:autofillHints="date"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/birthday_lbl"
                        android:focusable="true"
                        android:clickable="true"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/phoneContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birthdayContainer"
                    app:layout_constraintBottom_toTopOf="@id/emailContainer"
                    app:passwordToggleEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false"
                    app:expandedHintEnabled="false"
                    android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:id="@+id/phone"
                        android:autofillHints="phone"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/phone_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/emailContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneContainer"
                    app:layout_constraintBottom_toTopOf="@id/usernameContainer"
                    app:passwordToggleEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false" android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:id="@+id/email"
                        android:autofillHints="email"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/email_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/usernameContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailContainer"
                    app:layout_constraintBottom_toTopOf="@id/passwordContainer"
                    app:passwordToggleEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false"
                    android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:id="@+id/username"
                        android:autofillHints="username"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/username_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="45dp"
                    android:layout_width="0dp"
                    android:id="@+id/passwordContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/usernameContainer"
                    app:layout_constraintBottom_toTopOf="@id/confirmPasswordContainer"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false" android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:id="@+id/password"
                        android:autofillHints="password"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/password_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="45dp"
                    android:layout_width="0dp"
                    android:id="@+id/confirmPasswordContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordContainer"
                    app:layout_constraintBottom_toTopOf="@id/register"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="@color/editTextBackground"
                    app:hintEnabled="false" android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:id="@+id/confirmPassword"
                        android:autofillHints="password"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                        android:hint="@string/confirm_password_lbl"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:text="@string/register_btn"
                    android:backgroundTint="@color/loginBtnBackground"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:id="@+id/register"
                    app:cornerRadius="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordContainer"
                    android:layout_marginVertical="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
